--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -27,7 +27,7 @@ services:
     service_id: githubpublic
     parameters:
       repo_name: '{{toolchain.name}}'
-      repo_url: 'https://github.com/open-toolchain/node-hello-world'
+      repo_url: 'https://github.com/RabahZeineddine/node-hello-world'
       type: clone
       has_issues: true
       enable_traceability: true
@@ -48,6 +48,7 @@ services:
           PROD_SPACE_NAME: '{{form.pipeline.parameters.prod-space}}'
           PROD_ORG_NAME: '{{form.pipeline.parameters.prod-organization}}'
           PROD_REGION_ID: '{{form.pipeline.parameters.prod-region}}'
+          DEV_VAR: '{{form.pipeline.parameters.dev-var}}'
         execute: true
   webide:
     service_id: orion
@@ -58,4 +59,3 @@ form:
     schema:
       $ref: deploy.json
 
-      
